[package]
name = "endecode"
description = "A simple encoding crate for types."
authors = ["BlockOG"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/BlockOG/endecode"
license = "MIT"
license-file = "LICENSE"

[features]
derive = ["endecode-derive"]

[dependencies]
paste = "1.0.14"
endecode-derive = { path = "../endecode-derive", optional = true }

[dev-dependencies]
rand = "0.8.5"
